Fixed Alignmnt of Hover Company Details

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -294,11 +294,12 @@ nav > ul > li:hover {
   display: flex;
   align-items: center;
   max-height: 100%;
+  width: 30rem;
   background: #f0f0f0;
   gap: 3rem;
   margin-left: 5rem;
   /* padding: 0.1rem .6rem; */
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
 
   &_details {
     display: flex;
@@ -319,7 +320,7 @@ nav > ul > li:hover {
 
     > img {
       height: 100%;
-      aspect-ratio: 1;
+      /* aspect-ratio: 1; */
       object-fit: contain;
     }
   }
